Bug 162562 - Tabbed UI has ugly outline around tab section (gtk3)
Summary: Tabbed UI has ugly outline around tab section (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2024-08-22 12:27 UTC by Marqeaux
Modified: 2025-11-30 10:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
GIF animation showing the ugly outline (56.20 KB, image/gif)
2024-08-22 12:57 UTC, Buovjaga
Details
Fedora 40 default gtk theme (67.03 KB, image/png)
2025-02-25 09:51 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marqeaux 2024-08-22 12:27:57 UTC
Description:
I have a suggestion regarding the GUI of LibreOffice, and I hope you'll agree with me. It's about the tabbed section of LibreOffice. Because I think the tabbed section looks dreadful and "amateurish". At this moment the tabbed section is an ugly, unsightly, boxed-in part of the office suite, which makes it unappealing to the eye and looks like it's not really a part of the office suite (because it's boxed in!). By just making a small modification in that section could make LibreOffice a lot more appealing to look at and gives it a more professional appearance.

As an example of what I mean, I send a link to my own webspace where I uploaded a GIF-image I made of the current looks of the tabbed section, and my suggestion how it could be more appealing for the eye and more professional looking, especially to attract new users or users that complain about saying LO is "ugly". This is the link to the image: https://gifyu.com/image/SoTQq

Please rate my (small) input and, if rated positive, consider my suggestion in future releases of this wonderful office suite, because I feel LibreOffice should be more widely used worldwide instead of MS Office. ;-)

Steps to Reproduce:
Not applicable

Actual Results:
Not applicable

Expected Results:
Not applicable


Reproducible: Always


User Profile Reset: No

Additional Info:
Suggestion to make LibreOffice appealing to the eye.
Comment 1 Marqeaux 2024-08-22 12:32:08 UTC
Quote: "I send a link to my own webspace".

I used to use my own link in the original text, but instead I decided later to use Gifyu for the upload of the example. I forgot to alter my text. Sorry about that....
Comment 2 Buovjaga 2024-08-22 12:57:57 UTC
Created attachment 195954 [details]
GIF animation showing the ugly outline

Are you using Linux? GTK3? Which theme? I don't see this in Arch Linux KDE with either GTK3 or KF6.
Comment 3 Marqeaux 2024-08-24 21:45:30 UTC
Yes, I use Linux. The particular screenshot was taken within Linux Mint with the default theme. But this ugly layout also shows in other distro's. In Fedora it looks slightly different (there I use also the default theme!), but there is also an dreadful looking "boxed" section for the tabs. See here: https://postimg.cc/YGhPyTxJ

I rarely use Windows, but yesterday, when I fired that up and opened LibreOffice (after I updated it to the latest version of course!), the tabbed section under that OS looks fine: https://postimg.cc/ns4Hdj0y

Is this enough info?
Comment 4 Marqeaux 2025-01-27 16:32:51 UTC
Is there any update about this matter? I can imagine this is not top priority, but how hard can it be to change a few lines to make LibreOffice more appealing to the eye? At this moment (and under many distros with GTK) it looks just ugly. As an "OCD-guy" it annoys me and hurts my eyes. ;-)

I simply can't understand why this ugly boxed-in tabs got introduced in the first place? I have some laptops with Debian 12 (Bookworm) installed, and they have still run LibreOffice 7.4.7 in which the tabbed layout looks like it should. But in newer versions of LibreOffice this changed into this dreadful layout. Especially under GTK distro's with GNOME, Xcfe et cetera. Under KDE, LibreOffice looks great. The same under Windows, where it also looks like it should. Why not in GTK-style desktop managers?

I guess this has something to do with GTK-theming, that LibreOffice is not responsible for this dreadful layout and this is not the right place for my "complaint"?
Comment 5 Buovjaga 2025-01-27 17:09:58 UTC
(In reply to Marqeaux from comment #4)
> Is there any update about this matter? I can imagine this is not top
> priority, but how hard can it be to change a few lines to make LibreOffice
> more appealing to the eye? At this moment (and under many distros with GTK)
> it looks just ugly. As an "OCD-guy" it annoys me and hurts my eyes. ;-)
> 
> I simply can't understand why this ugly boxed-in tabs got introduced in the
> first place? I have some laptops with Debian 12 (Bookworm) installed, and
> they have still run LibreOffice 7.4.7 in which the tabbed layout looks like
> it should. But in newer versions of LibreOffice this changed into this
> dreadful layout. Especially under GTK distro's with GNOME, Xcfe et cetera.
> Under KDE, LibreOffice looks great. The same under Windows, where it also
> looks like it should. Why not in GTK-style desktop managers?

Then you have the golden opportunity to use binary bisecting to find out which code change is responsible for the ugliness:
https://wiki.documentfoundation.org/QA/Bibisect
https://wiki.documentfoundation.org/QA/Bibisect/Linux

I would do it myself, but I don't see any difference between 7.4 and the current versions when using GTK3. But probably my KDE environment can have an effect on that. So you would be the best person to do the bibisect. Let me know, if you need help.

If 7.4.7 is OK, I would start by downloading the 7.5 repository from https://wiki.documentfoundation.org/QA/Bibisect/Linux#Versions and if needed, continue downloading repos for newer versions.
Comment 6 raal 2025-02-13 17:08:32 UTC
I can confirm with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7da1497aa462e2b719aa9b308a749caf7b9a19b1
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 7 raal 2025-02-13 17:17:42 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.5.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 a26f045b5045f3fa05639ee578d7bde7d2d71c4a is the first bad commit
commit a26f045b5045f3fa05639ee578d7bde7d2d71c4a
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Oct 27 20:30:01 2022 +0200

    source ca482cf39f25941040596e50d0e1ab7fa25dc1dd

141911: calculate the header bounds even for !bPaneWithHeader case | https://gerrit.libreoffice.org/c/core/+/141911
Comment 8 Caolán McNamara 2025-02-25 09:51:53 UTC
Created attachment 199435 [details]
Fedora 40 default gtk theme

These things vary quite a bit depending on the desktop theme itself. So what I see is quite different. What is the theme in comment #2 ? So I can compare what LibreOffice renders vs what a fully native gtk3 app is rendering for the notebooks
Comment 9 Buovjaga 2025-02-25 11:00:22 UTC
(In reply to Caolán McNamara from comment #8)
> Created attachment 199435 [details]
> Fedora 40 default gtk theme
> 
> These things vary quite a bit depending on the desktop theme itself. So what
> I see is quite different. What is the theme in comment #2 ? So I can compare
> what LibreOffice renders vs what a fully native gtk3 app is rendering for
> the notebooks

Marqeaux mentioned using the default theme in Linux Mint, so I suppose it's Mint-X: https://github.com/linuxmint/mint-themes
Comment 10 Marqeaux 2025-02-25 20:39:05 UTC
This ugly tabbed GUI affects ALL GTK-styled themes under Linux, not just Linux Mint. When running a distro with GNOME, Xfce, MATE, Cinnamon et cetera it looks amateurisch and ugly, as I posted earlier, it looks like this (but with the suggestion on how it should look (i.m.h.o) in the GIF also: https://gifyu.com/image/SoTQq

Under Windows the tabbed section looks just fine. See here: https://postimg.cc/wgW8CZgH

If LibreOffice is themed under KDE it also looks decent. At least you can see it is a row of tabs. See here: https://postimg.cc/N9QvyzXp

And again: On ALL GTK-styled themes under many different distros I run (Ubuntu, Linux Mint, Manjaro, Fedora, Ubuntu MATE) have this issue with the DEFAULT theme! But I sure the non-default themes have this as well, because it's clearly a GTK-issue.

And again: this ugly "tabbed box" began under 7.5 or 7.6 (don't exactly know which of these two, because on LO 7.4 it looked as it should.

I can't give you more information than this. I'm just a user, not a programmer.
Comment 11 Buovjaga 2025-02-26 05:41:17 UTC
(In reply to Marqeaux from comment #10)
> And again: this ugly "tabbed box" began under 7.5 or 7.6 (don't exactly know
> which of these two, because on LO 7.4 it looked as it should.

This was already exactly determined by raal in comment 7.
 
> I can't give you more information than this. I'm just a user, not a
> programmer.

The question was about the exact theme name, but probably my comment 9 answers it regarding Mint.
Comment 12 Caolán McNamara 2025-11-29 19:41:32 UTC
I think the change was that the "header area" is shrunk down to the part that contains the tabs, while previously the whole width of the screen was the header area, so after the change it becomes visually distinct when hosted in the way the notebookbar is hosted.

The original intent was to get macOS looking right (not just here, but in general use of notebooks/tabcontrols), so the most expedient thing would be to restore back to only doing this when ControlPart::TabPaneWithHeader support is requested, but tweak the macOS backend to request ControlPart::TabPaneWithHeader, so the desired effect for that platform continues, while the unwanted sideeffect on gtk goes away.

https://gerrit.libreoffice.org/c/core/+/194824 for that
Comment 13 Commit Notification 2025-11-30 10:08:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bad8cf4bc2ca63e8c80571dc470ac75058efd1e4

Resolves: tdf#162562 only shrink to tab area for ControlPart::TabPaneWithHeader

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.